This doesn't quite fix #1010 but it does add the ellipsis so it doesn't look intentionally cut off.

--- a/dt-assets/scss/_main.scss
+++ b/dt-assets/scss/_main.scss
@@ -413,6 +413,7 @@ Title for boxed section
     font-size: 14px;
     white-space: nowrap;
     overflow: hidden;
+    text-overflow: ellipsis;
 }
 /*********************
 JQUERY OVERRIDES
